# simple_shell

./: AUTHORS  CMakeLists.txt  README.md  builtin.c  builtin1.c  environ.c  errors.c  errors1.c  exits.c  getLine.c  getenv.c  getinfo.c  history.c  lists.c  lists1.c  main.c  man_1_simple_shell  memory.c  parser.c  realloc.c  shell.h  shell_loop.c  string.c  string1.c  tokenizer.c  vars.c
